# ActionPadServer

./: .gitignore  CMakeLists.txt
i18n/: ActionPadServer_fr.ts
include/: actionpadserver.h
qml/: ActionDialog.qml  Main.qml  SettingsWindow.qml
qml/Singletons/: UserSettings.qml
resources/icons/: icons.qrc
src/: actionpadserver.cpp  main.cpp  shortcutmanager.cpp
